Tim/chore/connectors client removed from sdk (#124)
* Update go.mod

* Update go.sum

* Update operationStatus.go

* Update registerConnector.go

* Update swagger comments

* docs: auto-generate documentation

Auto-generated by generate-docs.sh workflow

---------
